--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,17 @@ doctest = false
 inherits = "release"
 debug = 1
 
+[profile.max]
+inherits = "release"
+panic = "abort"
+codegen-units = 1
+lto = true
+
+[profile.bench]
+inherits = "max"
+debug = true
+strip = false
+
 [features]
 dhat-heap = ["dhat"]
 today = ["chrono"]
@@ -25,6 +36,7 @@ test_lib = []
 chrono = { version = "0.4.38", optional = true }
 dhat = { version = "0.3.3", optional = true }
 pico-args = "0.5.0"
+ratatui = "0.29.0"
 tinyjson = "2.5.1"
 
 # Solution dependencies
