--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ chrono = { version = "0.4.38", optional = true }
 dhat = { version = "0.3.3", optional = true }
 pico-args = "0.5.0"
 ratatui = "0.29.0"
+rayon = "1.11.0"
 tinyjson = "2.5.1"
 
 # Solution dependencies
