--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ test_lib = []
 # Template dependencies
 chrono = { version = "0.4.38", optional = true }
 dhat = { version = "0.3.3", optional = true }
+good_lp = "1.14.2"
 pico-args = "0.5.0"
 ratatui = "0.29.0"
 rayon = "1.11.0"
